Finish base of the feature
* Re-hook up API and Queries with new permission checks and uuid lookups
* Add URLs to go Portal <-> ALCS
* Change submissions and documents to be ManyToOne so we can clone them

--- a/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
@@ -4,6 +4,7 @@
       [submittedApplication]="submission"
       [fileNumber]="fileNumber"
       [applicationType]="application.type.code"
+      [showEdit]='true'
     ></app-application-details>
   </div>
 </div>
