--- a/portal-frontend/src/app/features/edit-submission/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-submission/other-parcels/other-parcels.component.html
@@ -113,7 +113,8 @@
 </section>
 
 <div class="button-container">
-  <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
+  <button *ngIf="!draftMode" (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
+  <button *ngIf="draftMode" (click)="onSaveExit()" mat-stroked-button color="accent">Discard all Changes</button>
   <div>
     <button mat-stroked-button (click)="onNavigateToStep(currentStep - 1)" color="primary">
       Previous<span class="mobile-hidden"> Step</span>
