--- a/portal-frontend/src/styles/form-controls.scss
+++ b/portal-frontend/src/styles/form-controls.scss
@@ -74,7 +74,7 @@ form {
 
     @media screen and (min-width: $tabletBreakpoint) {
       & {
-        font-size: rem(16) !important;;
+        font-size: rem(16) !important;
       }
     }
   }
