Add drag/drop icon indicator for evidentiary record

--- a/alcs-frontend/src/app/shared/application-document/application-document.component.html
+++ b/alcs-frontend/src/app/shared/application-document/application-document.component.html
@@ -45,7 +45,7 @@
 
   <ng-container matColumnDef="sorting">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
+    <td class='drag-cell' mat-cell *matCellDef="let element">
       <mat-icon>drag_indicator</mat-icon>
     </td>
   </ng-container>
