Use pseudo-class :has selector to add styling disabled field labels

--- a/portal-frontend/src/styles/form-controls.scss
+++ b/portal-frontend/src/styles/form-controls.scss
@@ -72,9 +72,17 @@ form {
     font-weight: 700;
     font-size: rem(13) !important;
 
+    &:has(+ .mat-form-field-disabled) {
+      color: colors.$grey;
+    }
+
+    &:has(+ div ~ mat-form-field.mat-form-field-disabled) {
+      color: colors.$grey;
+    }
+
     @media screen and (min-width: $tabletBreakpoint) {
       & {
-        font-size: rem(16) !important;;
+        font-size: rem(16) !important;
       }
     }
   }
@@ -100,7 +108,8 @@ form {
       }
     }
 
-    .mat-form-field, .mat-mdc-form-field {
+    .mat-form-field,
+    .mat-mdc-form-field {
       margin-top: rem(5);
       width: 100%;
 
