Apply disabled label styling to toggle buttons

--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="parcelForm">
   <div class="type">
-    <h6>Select ownership type:</h6>
+    <label>Select ownership type:</label>
     <div class="warning">
       The answer to the following question will change the rest of the application form. Do not change this answer once
       selected.
