Add gray background color white dragging file rows

--- a/alcs-frontend/src/app/shared/application-document/application-document.component.scss
+++ b/alcs-frontend/src/app/shared/application-document/application-document.component.scss
@@ -35,8 +35,12 @@ a {
 
 .drag-cell {
   cursor: grab;
+
+  &:active {
+    cursor: grabbing;
+  }
 }
 
-.drag-cell:active {
-  cursor: grabbing;
+.cdk-drag-placeholder, .cdk-drag-preview {
+  background-color: colors.$grey-light !important;
 }
