Add error border styling

--- a/portal-frontend/src/styles/form-controls.scss
+++ b/portal-frontend/src/styles/form-controls.scss
@@ -140,3 +140,35 @@ form {
 .mdc-list-item__primary-text {
   width: 100%;
 }
+
+.mdc-text-field--invalid {
+  // Default error border
+  .mdc-notched-outline__leading,
+  .mdc-notched-outline__notch {
+    border-bottom-width: 3px !important;
+    border-left-width: 3px !important;
+    border-top-width: 3px !important;
+  }
+
+  .mdc-notched-outline__trailing {
+    border-bottom-width: 3px !important;
+    border-right-width: 3px !important;
+    border-top-width: 3px !important;
+  }
+
+  // Focus error border to match default mat behaviour
+  .mdc-notched-outline--notched {
+    .mdc-notched-outline__leading,
+    .mdc-notched-outline__notch {
+      border-bottom-width: 2px !important;
+      border-left-width: 2px !important;
+      border-top-width: 2px !important;
+    }
+
+    .mdc-notched-outline__trailing {
+      border-bottom-width: 2px !important;
+      border-right-width: 2px !important;
+      border-top-width: 2px !important;
+    }
+  }
+}
