Fixes for Edit Submissions
* Change setPrimary contact to use UUID instead of File Number
* Fix links on review page to stay in ALCS edit mode
* Hide submit button for drafts

--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -1,5 +1,10 @@
 <section>
-  <app-parcel [$applicationSubmission]="$application" [showErrors]="showErrors" [showEdit]="showEdit"></app-parcel>
+  <app-parcel
+    [draftMode]="draftMode"
+    [$applicationSubmission]="$application"
+    [showErrors]="showErrors"
+    [showEdit]="showEdit"
+  ></app-parcel>
 </section>
 <section>
   <app-parcel
@@ -7,6 +12,7 @@
     [showErrors]="showErrors"
     [showEdit]="showEdit"
     [parcelType]="parcelType.OTHER"
+    [draftMode]="draftMode"
   ></app-parcel>
 </section>
 <section>
