--- a/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
+++ b/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
@@ -2,6 +2,7 @@
   <app-application-details
     [$application]="$applicationSubmission"
     [$applicationDocuments]="$applicationDocuments"
+    [draftMode]='draftMode'
   ></app-application-details>
   <div class="button-container">
     <button
@@ -22,7 +23,7 @@
       <button mat-stroked-button color="primary" (click)="onNavigateToStep(6)">
         Previous<span class="mobile-hidden"> Step</span>
       </button>
-      <button mat-flat-button color="primary" (click)="onSubmitToAlcs()">Submit</button>
+      <button *ngIf='!draftMode' mat-flat-button color="primary" (click)="onSubmitToAlcs()">Submit</button>
     </div>
   </div>
 </section>
