--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="parcelForm">
   <div class="type">
-    <h6>Select ownership type:</h6>
+    <label>Select ownership type:</label>
     <div class="warning">
       The answer to the following question will change the rest of the application form. Do not change this answer once
       selected.
@@ -131,6 +131,9 @@
         <mat-datepicker-toggle matIconSuffix [for]="purchaseDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #purchaseDatePicker startView="year"></mat-datepicker>
       </mat-form-field>
+      <div>
+        <mat-hint class="subtext"> Example: 2020-Mar-01 </mat-hint>
+      </div>
       <div *ngIf="purchaseDate.invalid && (purchaseDate.dirty || purchaseDate.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="purchaseDate.errors?.['required']">This field is required</div>
@@ -227,7 +230,7 @@
       <div>
         <app-parcel-owners
           [fileId]="fileId"
-          [submissionUuid]='submissionUuid'
+          [submissionUuid]="submissionUuid"
           [parcelUuid]="parcel.uuid"
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
@@ -304,7 +307,7 @@
       <div>
         <app-parcel-owners
           [fileId]="fileId"
-          [submissionUuid]='submissionUuid'
+          [submissionUuid]="submissionUuid"
           [parcelUuid]="parcel.uuid"
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
