--- a/portal-frontend/src/app/features/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
@@ -8,7 +8,10 @@
 </div>
 <app-warning-banner>
   Please consult the '
-  <a href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/" target="_blank">
+  <a
+    href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/"
+    target="_blank"
+  >
     What the Commission Considers
   </a>
   ' page of the ALC website for more information.
@@ -28,6 +31,7 @@
           formControlName="hectares"
           placeholder="Type size in hectares"
         />
+        <span *ngIf="hectares.value" matTextSuffix>ha</span>
       </mat-form-field>
       <div *ngIf="hectares.invalid && (hectares.dirty || hectares.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
@@ -186,8 +190,9 @@
             min="0.01"
             matInput
             formControlName="totalFillPlacement"
-            placeholder="Type fill depth"
+            placeholder="Type fill depth in hectares"
           />
+          <span *ngIf="totalFillPlacement.value" matTextSuffix>ha</span>
         </mat-form-field>
         <div
           *ngIf="totalFillPlacement.invalid && (totalFillPlacement.dirty || totalFillPlacement.touched)"
@@ -211,8 +216,9 @@
             min="0.01"
             matInput
             formControlName="maxFillDepth"
-            placeholder="Type placement area"
+            placeholder="Type placement area in meters"
           />
+          <span *ngIf="maxFillDepth.value" matTextSuffix>m</span>
         </mat-form-field>
         <div *ngIf="maxFillDepth.invalid && (maxFillDepth.dirty || maxFillDepth.touched)" class="field-error">
           <mat-icon>warning</mat-icon>
@@ -233,8 +239,9 @@
             separatorLimit="9999999999"
             matInput
             formControlName="fillVolume"
-            placeholder="Type volume"
+            placeholder="Type volume in cubic meters"
           />
+          <span *ngIf="fillVolume.value" matTextSuffix>m<sup>3</sup></span>
         </mat-form-field>
         <div *ngIf="fillVolume.invalid && (fillVolume.dirty || fillVolume.touched)" class="field-error">
           <mat-icon>warning</mat-icon>
@@ -250,6 +257,23 @@
       1 year, enter 0 in the Years field.
     </div>
     <div class="form-row">
+      <div>
+        <label for="projectDurationUnit">Duration</label>
+        <mat-form-field appearance="outline">
+          <mat-select placeholder="Select one" id="projectDurationUnit" formControlName="projectDurationUnit">
+            <mat-option value="days">Days</mat-option>
+            <mat-option value="months">Months</mat-option>
+            <mat-option value="years">Years</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <div
+          *ngIf="projectDurationUnit.invalid && (projectDurationUnit.dirty || projectDurationUnit.touched)"
+          class="field-error"
+        >
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="projectDurationUnit.errors?.['required']">This field is required</div>
+        </div>
+      </div>
       <div>
         <label for="projectDurationAmount">Length</label>
         <mat-form-field appearance="outline">
@@ -270,23 +294,6 @@
         >
           <mat-icon>warning</mat-icon>
           <div *ngIf="projectDurationAmount.errors?.['required']">This field is required</div>
-        </div>
-      </div>
-      <div>
-        <label for="projectDurationUnit">Unit</label>
-        <mat-form-field appearance="outline">
-          <mat-select placeholder="Select one" id="projectDurationUnit" formControlName="projectDurationUnit">
-            <mat-option value="days">Days</mat-option>
-            <mat-option value="months">Months</mat-option>
-            <mat-option value="years">Years</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <div
-          *ngIf="projectDurationUnit.invalid && (projectDurationUnit.dirty || projectDurationUnit.touched)"
-          class="field-error"
-        >
-          <mat-icon>warning</mat-icon>
-          <div *ngIf="projectDurationUnit.errors?.['required']">This field is required</div>
         </div>
       </div>
     </div>
