Add Updated Banner
* Diff Old and new Submission and store diffs into array
* Look into Array to see if form fields have changed and render accordingly
* Update Parcels to have similar logic

--- a/portal-frontend/src/app/features/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/alcs-edit-submission/alcs-edit-submission.component.html
@@ -133,6 +133,8 @@
       <app-review-and-submit
         [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
+        [updatedFields]="updatedFields"
+        [originalSubmissionUuid]='originalSubmissionUuid'
         [draftMode]="true"
         (exit)="onExit()"
       ></app-review-and-submit>
