--- a/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
+++ b/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
@@ -3,6 +3,8 @@
     [$application]="$applicationSubmission"
     [$applicationDocuments]="$applicationDocuments"
     [draftMode]='draftMode'
+    [updatedFields]='updatedFields'
+    [originalSubmissionUuid]='originalSubmissionUuid'
   ></app-application-details>
   <div class="button-container">
     <button
