--- a/portal-frontend/src/app/features/application-details/subd-details/subd-details.component.html
+++ b/portal-frontend/src/app/features/application-details/subd-details/subd-details.component.html
@@ -1,5 +1,8 @@
 <div *ngIf="_applicationSubmission" class="review-table">
-  <div class="subheading2 full-width">Proposed Lot Areas</div>
+  <div class="subheading2 full-width">
+    Proposed Lot Areas
+    <app-updated-banner *ngIf="updatedFields.includes('subdProposedLots')"></app-updated-banner>
+  </div>
   <div class="full-width parcel-table">
     <div class="grid-1 subheading2">#</div>
     <div class="grid-2 subheading2">Type</div>
@@ -25,17 +28,26 @@
       <div>The total lot area proposed must match {{ totalTargetAcres }} hectares as provided in Step 1</div>
     </div>
   </div>
-  <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
+  <div class="subheading2 grid-1">
+    What is the purpose of the proposal?
+    <app-updated-banner *ngIf="updatedFields.includes('subdPurpose')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     {{ _applicationSubmission.subdPurpose }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.subdPurpose"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">Why do you believe this parcel is suitable for subdivision?</div>
+  <div class="subheading2 grid-1">
+    Why do you believe this parcel is suitable for subdivision?
+    <app-updated-banner *ngIf="updatedFields.includes('subdSuitability')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     {{ _applicationSubmission.subdSuitability }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.subdSuitability"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">Does the proposal support agriculture in the short or long term? Please explain.</div>
+  <div class="subheading2 grid-1">
+    Does the proposal support agriculture in the short or long term? Please explain.
+    <app-updated-banner *ngIf="updatedFields.includes('subdAgricultureSupport')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     {{ _applicationSubmission.subdAgricultureSupport }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.subdAgricultureSupport"></app-no-data>
@@ -47,12 +59,18 @@
     </a>
     <app-no-data [showRequired]="showErrors" *ngIf="proposalMap.length === 0"></app-no-data>
   </div>
-  <div class="subheading2 grid-1">Are you applying for subdivision pursuant to the ALC Homesite Severance Policy?</div>
+  <div class="subheading2 grid-1">
+    Are you applying for subdivision pursuant to the ALC Homesite Severance Policy?
+    <app-updated-banner *ngIf="updatedFields.includes('subdIsHomeSiteSeverance')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     <span *ngIf="_applicationSubmission.subdIsHomeSiteSeverance !== null">
       {{ _applicationSubmission.subdIsHomeSiteSeverance ? 'Yes' : 'No' }}
     </span>
-    <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.subdIsHomeSiteSeverance === null"></app-no-data>
+    <app-no-data
+      [showRequired]="showErrors"
+      *ngIf="_applicationSubmission.subdIsHomeSiteSeverance === null"
+    ></app-no-data>
   </div>
   <div class="subheading2 grid-1">Proof of Homesite Severance Qualification</div>
   <div class="grid-double">
