--- a/portal-frontend/src/app/features/application-details/tur-details/tur-details.component.html
+++ b/portal-frontend/src/app/features/application-details/tur-details/tur-details.component.html
@@ -1,33 +1,33 @@
-<div *ngIf="_application" class="review-table">
+<div *ngIf="_applicationSubmission" class="review-table">
   <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
   <div class="grid-double">
-    {{ _application.turPurpose }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_application.turPurpose"></app-no-data>
+    {{ _applicationSubmission.turPurpose }}
+    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.turPurpose"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
     Specify any agricultural activities such as livestock operations, greenhouses or horticultural activities in
     proximity to the proposal.
   </div>
   <div class="grid-double">
-    {{ _application.turAgriculturalActivities }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_application.turAgriculturalActivities"></app-no-data>
+    {{ _applicationSubmission.turAgriculturalActivities }}
+    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.turAgriculturalActivities"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
     What steps will you take to reduce potential negative impacts on surrounding agricultural lands?
   </div>
   <div class="grid-double">
-    {{ _application.turReduceNegativeImpacts }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_application.turReduceNegativeImpacts"></app-no-data>
+    {{ _applicationSubmission.turReduceNegativeImpacts }}
+    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.turReduceNegativeImpacts"></app-no-data>
   </div>
   <div class="subheading2 grid-1">Could this proposal be accommodated on lands outside of the ALR?</div>
   <div class="grid-double">
-    {{ _application.turOutsideLands }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_application.turOutsideLands"></app-no-data>
+    {{ _applicationSubmission.turOutsideLands }}
+    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.turOutsideLands"></app-no-data>
   </div>
   <div class="subheading2 grid-1">Total area of corridor</div>
   <div class="grid-double">
-    <span *ngIf="_application.turTotalCorridorArea !== null">{{ _application.turTotalCorridorArea }}</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="_application.turTotalCorridorArea === null"></app-no-data>
+    <span *ngIf="_applicationSubmission.turTotalCorridorArea !== null">{{ _applicationSubmission.turTotalCorridorArea }}</span>
+    <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.turTotalCorridorArea === null"></app-no-data>
   </div>
   <div class="subheading2 grid-1">Proof of Serving Notice</div>
   <div class="grid-double">
