Add Civic Address to Parcels
* Add to entity and DTOs
* Add input on form as required
* Show on app detail pages and PDFs
* Add to validation

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
@@ -40,6 +40,10 @@
     <div class="grid-double">
       {{ parcel.purchasedDate | date }}
     </div>
+    <div class="subheading2 grid-1">Civic Address</div>
+    <div class="grid-double">
+      {{ parcel.civicAddress }}
+    </div>
     <div class="subheading2 grid-1">Farm Classification</div>
     <div class="grid-double">
       <span *ngIf="parcel.isFarm !== null">{{ parcel.isFarm ? 'Yes' : 'No' }}</span>
